office loc complete

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -34,7 +34,7 @@
             </p>
           </a>
           <ul class="nav nav-treeview">
-            
+
             <!-- GEOGRÁFICAS -->
             <li class="nav-item has-treeview">
               <a href="#" class="nav-link">
@@ -67,6 +67,12 @@
                   <a href="{% url 'sh:dependency_list' %}" class="nav-link">
                     <i class="fa-solid fa-gavel"></i>
                     <p>Dependencia</p>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a href="{% url 'sh:office_loc_list' %}" class="nav-link">
+                    <i class="fa-solid fa-building"></i>
+                    <p>Locación de Oficina</p>
                   </a>
                 </li>
                 <li class="nav-item">
