--- a/core/sh/templates/office_loc/create.html
+++ b/core/sh/templates/office_loc/create.html
@@ -31,6 +31,9 @@
 <div class="form-group">
   <label for="id_floor">Piso:</label>
   {{ form.floor }}
+  {% if form.floor.help_text %}
+  <small class="form-text text-muted">{{form.floor.help_text}}</small>
+  {% endif %}
   {% if form.floor.errors %}
   <div class="invalid-feedback d-block">
     {{ form.floor.errors|join:"<br>" }}
@@ -40,6 +43,9 @@
 <div class="form-group">
   <label for="id_connection_type">Ala:</label>
   {{ form.wing }}
+  {% if form.wing.help_text %}
+  <small class="form-text text-muted">{{form.wing.help_text}}</small>
+  {% endif %}
   {% if form.wing.errors %}
   <div class="invalid-feedback d-block">
     {{ form.wing.errors|join:"<br>" }}
