--- a/core/sh/templates/switch/list.html
+++ b/core/sh/templates/switch/list.html
@@ -10,7 +10,7 @@
 {% block columns %}
 
   <th scope="col" style="width: 5%;">Id</th>
-  <th scope="col" style="width: 15%;">Brand</th>
+  <th scope="col" style="width: 15%;">Marca</th>
   <th scope="col" style="width: 15%;">Nro. de Serie</th>
   <th scope="col" style="width: 15%;">Cantidad de puertos</th>
   <th scope="col" style="width: 20%;">Rack</th>
