--- a/core/sh/templates/dependency/create.html
+++ b/core/sh/templates/dependency/create.html
@@ -28,6 +28,15 @@
   {% endif %}
 </div>
 <div class="form-group">
+  <label for="edifice">Edifice:</label>
+  {{ form.edifice }}
+  {% if form.edifice.errors %}
+    <div class="invalid-feedback d-block">
+      {{ form.edifice.errors|join:'<br>' }}
+    </div>
+  {% endif %}
+</div>
+<div class="form-group">
   <label for="dependency">Dependencia:</label>
   {{ form.dependency }}
   {% if form.dependency.errors %}
