--- a/core/sh/templates/dependency/list.html
+++ b/core/sh/templates/dependency/list.html
@@ -9,7 +9,10 @@
 
 {% block columns %}
 
-  <th scope="col" style="width: 5%;">Id</thr>
+  <th scope="col" style="width: 5%;">Id</th>
+  <th scope="col" style="width: 15%;">Provincia</th>
+  <th scope="col" style="width: 20%;">Loacalidad</th>
+  <th scope="col" style="width: 15%;">Edificio</th>
   <th scope="col" style="width: 25%;">Dependencia</th>
   <th scope="col" style="width: 10%;">Opciones</th>
 
