--- a/core/sh/templates/office_loc/create.html
+++ b/core/sh/templates/office_loc/create.html
@@ -1,4 +1,4 @@
-{% extends 'form.html' %}
+{% extends 'form.html' %} 
 {% load static %}
 
 {% block extra_refs %}
@@ -10,6 +10,15 @@
 
 {% block form %}
 
+<div class="form-group">
+  <label for="id_province">Provincia:</label>
+  {{ form.province }}
+  {% if form.province.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.province.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
 <div class="form-group">
   <label for="id_location">Localidad:</label>
   {{ form.location }}
