--- a/core/sh/templates/office/create.html
+++ b/core/sh/templates/office/create.html
@@ -11,6 +11,15 @@
 {% block form %}
 
 <div class="form-group">
+  <label for="id_province">Provincia:</label>
+  {{ form.province }}
+  {% if form.province.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.province.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+<div class="form-group">
   <label for="id_location">Localidad:</label>
   {{ form.location }}
   {% if form.location.errors %}
