--- a/core/sh/templates/office/list.html
+++ b/core/sh/templates/office/list.html
@@ -9,12 +9,13 @@
 
 {% block columns %}
 
-  <th scope="col" style="width: 5%;">Id</thr>
-  <th scope="col" style="width: 15%;">Localidad</thr>
-  <th scope="col" style="width: 20%;">Edificio</th>
-  <th scope="col" style="width: 25%;">Oficina</th>
-  <th scope="col" style="width: 25%;">Dependencia</th>
-  <th scope="col" style="width: 10%;">Opciones</th>
+  <th scope="col" style="width: 5%;">Id</th>
+  <th scope="col" style="width: 10%;">Provincia</th>
+  <th scope="col" style="width: 15%;">Localidad</th>
+  <th scope="col" style="width: 15%;">Edificio</th>
+  <th scope="col" style="width: 20%;">Oficina</th>
+  <th scope="col" style="width: 20%;">Dependencia</th>
+  <th scope="col" style="width: 15%;">Opciones</th>
 
 {% endblock columns %}
 
