--- a/core/sh/templates/dev_model/create.html
+++ b/core/sh/templates/dev_model/create.html
@@ -1,1 +1,51 @@
 {% extends 'form.html' %}
+
+{% load static %}
+
+{% block form %}
+
+<div class="form-group">
+  <label for="id_dev_type">Tipo de Dispositivo:</label>
+  {{form.dev_type}}
+  {% if form.dev_type.errors %}
+    <div class="invalid-feedback d-block">
+      {{form.dev_type.errors|join:"<br>"}}
+    </div>
+  {% endif %}
+</div>
+<div class="form-group">
+  <label for="id_brand">Marca:</label>
+  {{form.brand}}
+  {% if form.brand.errors %}
+    <div class="invalid-feedback d-block">
+      {{form.brand.errors|join:"<br>"}}
+    </div>
+  {% endif %}
+</div>
+<div class="form-group">
+  <label for="id_dev_model">Modelo de Dispositivo:</label>
+  {{form.dev_model}}
+  {% if form.dev_model.errors %}
+    <div class="invalid-feedback d-block">
+      {{form.dev_model.errors|join:"<br>"}}
+    </div>
+  {% endif %}
+</div>
+<div class="form-group">
+  <label for="id_image">Imagen:</label>
+  {{form.image}}
+  {% if form.image.help_text%}
+    <small class="form-text text-muted">{{form.image.help_text}}</small>
+  {% endif %}
+  {% if form.image.errors %}
+    <div class="invalid-feedback d-block">
+      {{form.image.errors|join:"<br>"}}
+    </div>
+  {% endif %}
+</div>
+
+{% endblock form %}
+
+{% block form_scripts %}
+  <script src="{% static 'dev_model' %}"></script>
+{% endblock form_scripts %}
