--- a/core/sh/templates/dev_status/delete.html
+++ b/core/sh/templates/dev_status/delete.html
@@ -4,7 +4,7 @@
 <div class="card-body table-responsive">
   <div class="alert alert-danger alert-dismissible">
     <h5><i class="icon fas fa-triangle-exclamation"></i> Atención!</h5>
-      Estas por eliminar el registro Nro: Estas por eliminar el registro Nro: {{object.id}}, {{del_title}} {{object.dev_model}}, S/N°: {{object.serial_c}}, asignada al usuario: {{object.employee.employee_last_name}}, {{object.employee.employee_name}}
+      Estas por eliminar el registro Nro: Estas por eliminar el registro Nro: {{object.id}}, {{del_title}} {{object.dev_status}}.
       ¿Deseas continuar?
     </div>
 </div>
