--- a/core/sh/templates/dev_type/create.html
+++ b/core/sh/templates/dev_type/create.html
@@ -1,1 +1,21 @@
 {% extends 'form.html' %}
+
+{% load static %}
+
+{% block form %}
+
+<div class="form-group">
+  <label for="id_dev_type">Tipo de Dispositivo:</label>
+  {{form.dev_type}}
+  {% if form.dev_type.errors %}
+    <div class="invalid-feedback d-block">
+      {{form.dev_type.errors|join:"<br>"}}
+    </div>
+  {% endif %}
+</div>
+
+{% endblock form %}
+
+{% block form_scripts %}
+  <script src="{% static 'dev_type' %}"></script>
+{% endblock form_scripts %}
