--- a/core/sh/templates/dev_model/create.html
+++ b/core/sh/templates/dev_model/create.html
@@ -1,6 +1,12 @@
 {% extends 'form.html' %}
-
 {% load static %}
+
+{% block extra_refs %}
+<!-- Select2 -->
+<link rel="stylesheet" href="{% static 'lib/select2-4.1.0-rc.0/dist/css/select2.min.css' %}">
+<link rel="stylesheet" href="{% static 'lib/select2-4.1.0-rc.0/dist/css/select2-bootstrap.min.css' %}">
+<script src="{% static 'lib/select2-4.1.0-rc.0/dist/js/select2.full.min.js' %}"></script>
+{% endblock extra_refs %}
 
 {% block form %}
 
@@ -47,5 +53,5 @@
 {% endblock form %}
 
 {% block form_scripts %}
-  <script src="{% static 'dev_model' %}"></script>
+  <script src="{% static 'dev_model/js/form.js' %}"></script>
 {% endblock form_scripts %}
