dinamic Techs and Employee OK

--- a/core/sh/templates/brand/create.html
+++ b/core/sh/templates/brand/create.html
@@ -17,5 +17,5 @@
 {% endblock form %}
 
 {% block form_scripts %}
-  <script src="{% static 'brand/js/form.js' %}"></script>
+  <script src="{% static 'form_basic.js' %}"></script>
 {% endblock form_scripts %}
