--- a/core/sh/templates/dev_status/create.html
+++ b/core/sh/templates/dev_status/create.html
@@ -16,5 +16,5 @@
   {% endblock form %}
 
 {% block form_scripts %}
-  <script src="{% static 'dev_status' %}"></script>
+  <script src="{% static 'form_basic.js' %}"></script>
 {% endblock form_scripts %}
