--- a/core/sh/templates/dev_type/create.html
+++ b/core/sh/templates/dev_type/create.html
@@ -17,5 +17,5 @@
 {% endblock form %}
 
 {% block form_scripts %}
-  <script src="{% static 'dev_type' %}"></script>
+  <script src="{% static 'form_basic.js' %}"></script>
 {% endblock form_scripts %}
