--- a/core/sh/templates/employee/create.html
+++ b/core/sh/templates/employee/create.html
@@ -1,1 +1,130 @@
 {% extends 'form.html' %}
+{% load static %}
+
+{% block extra_refs %}
+<!-- Select2 -->
+<link rel="stylesheet" href="{% static 'lib/select2-4.1.0-rc.0/dist/css/select2.min.css' %}">
+<link rel="stylesheet" href="{% static 'lib/select2-4.1.0-rc.0/dist/css/select2-bootstrap.min.css' %}">
+<script src="{% static 'lib/select2-4.1.0-rc.0/dist/js/select2.full.min.js' %}"></script>
+{% endblock extra_refs %}
+
+{% block form %}
+
+<div class="form-group">
+  <label for="id_province">Provincia:</label>
+  {{ form.province }}
+  {% if form.province.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.province.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+
+<div class="form-group">
+  <label for="id_location">Localidad:</label>
+  {{ form.location }}
+  {% if form.location.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.location.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+<div class="form-group">
+  <label for="id_dependency">Dependencia:</label>
+  {{ form.dependency }}
+  {% if form.dependency.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.dependency.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+<div class="form-group">
+  <label for="id_edifice">Edificio:</label>
+  {{ form.edifice }}
+  {% if form.edifice.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.edifice.errors|join:"<br>" }}
+  </div>
+{% endif %}
+</div>
+<div class="form-group">
+  <label for="id_loc">Ubicación:</label>
+  {{ form.loc }}
+  {% if form.loc.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.loc.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+<div class="form-group">
+  <label for="id_office">Oficina:</label>
+  {{ form.office }}
+  {% if form.office.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.office.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+<div class="form-group">
+  <label for="id_employee_name">Nombre del Empleado:</label>
+  {{ form.employee_name }}
+  {% if form.employee_name.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.employee_name.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+<div class="form-group">
+  <label for="id_employee_last_name">Apellido del Empleado:</label>
+  {{ form.employee_last_name }}
+  {% if form.employee_last_name.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.employee_last_name.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+<div class="form-group">
+  <label for="id_cuil">Número de CUIL:</label>
+  {{ form.cuil }}
+  {% if form.cuil.help_text %}
+  <small class="form-text text-muted">{{form.cuil.help_text}}</small>
+  {% endif %}
+  {% if form.cuil.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.cuil.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+<div class="form-group">
+  <label for="id_status">Estado del Empleado:</label>
+  {{ form.status }}
+  {% if form.status.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.status.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+<div class="form-group">
+  <label for="id_user_pc">Usuario de la PC:</label>
+  {{ form.user_pc }}
+  {% if form.user_pc.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.user_pc.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+<div class="form-group">
+  <label for="id_avatar">Imagen del Empleado:</label>
+  {{ form.avatar }}
+  {% if form.avatar.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.avatar.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+
+{% endblock form %}
+
+{% block form_scripts %}
+  <script src="{% static 'employee/js/form.js' %}"></script>
+{% endblock form_scripts %}
