--- a/core/sh/templates/employee_status/create.html
+++ b/core/sh/templates/employee_status/create.html
@@ -1,1 +1,21 @@
 {% extends 'form.html' %}
+
+{% load static %}
+
+{% block form %}
+
+<div class="form-group">
+  <label for="id_status">Estado de Empleado:</label>
+  {{ form.status }}
+  {% if form.status.errors %}
+    <div class="invalid-feedback d-block">
+      {{ form.status.errors|join:"<br>" }}
+    </div>
+  {% endif %}
+</div>
+
+{% endblock form %}
+
+{% block form_scripts %}
+  <script src="{% static 'form_basic.js' %}"></script>
+{% endblock form_scripts %}
