--- a/core/sh/templates/rack/create.html
+++ b/core/sh/templates/rack/create.html
@@ -29,5 +29,5 @@
 {% endblock form %}
 
 {% block form_scripts %}
-  <script src="{% static 'rack/js/form.js' %}"></script>
+  <script src="{% static 'form_basic.js' %}"></script>
 {% endblock form_scripts %}
