--- a/core/sh/templates/suply_type/create.html
+++ b/core/sh/templates/suply_type/create.html
@@ -1,1 +1,19 @@
 {% extends 'form.html' %}
+{% load static %}
+
+{% block form %}
+<div class="form-group">
+  <label for="suply_type_id">Tipo de Insumo:</label>
+  {{ form.suply_type }}
+  {% if form.suply_type.errors %}
+    <div class="invalid-feedback d-block">
+      {{ form.suply_type.errors|join:"<br>" }}
+    </div>
+  {% endif %}
+</div>
+
+{% endblock form %}
+
+{% block form_scripts %}
+  <script src="{% static 'form_basic.js' %}"></script>
+{% endblock form_scripts %}
