--- a/core/sh/templates/switch_port/create.html
+++ b/core/sh/templates/switch_port/create.html
@@ -1,1 +1,206 @@
 {% extends 'form.html' %}
+{% load static %}
+
+{% block extra_refs %}
+<!-- Select2 -->
+<link rel="stylesheet" href="{% static 'lib/select2-4.1.0-rc.0/dist/css/select2.min.css' %}">
+<link rel="stylesheet" href="{% static 'lib/select2-4.1.0-rc.0/dist/css/select2-bootstrap.min.css' %}">
+<script src="{% static 'lib/select2-4.1.0-rc.0/dist/js/select2.full.min.js' %}"></script>
+{% endblock extra_refs %}
+
+{% block form %}
+
+<div class="form-group">
+  <label for="id_province">Provincia:</label>
+  {{ form.province }}
+  {% if form.province.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.province.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+
+<div class="form-group">
+  <label for="id_location">Localidad:</label>
+  {{ form.location }}
+  {% if form.location.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.location.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+
+<div class="form-group">
+  <label for="id_dependency">Dependencia:</label>
+  {{ form.dependency }}
+  {% if form.dependency.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.dependency.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+
+<div class="form-group">
+  <label for="id_edifice">Edificio:</label>
+  {{ form.edifice }}
+  {% if form.edifice.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.edifice.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+
+<div class="form-group">
+  <label for="id_loc">Ubicación:</label>
+  {{ form.loc }}
+  {% if form.loc.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.loc.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+
+<div class="form-group">
+  <label for="id_office">Oficina:</label>
+  {{ form.office }}
+  {% if form.office.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.office.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+
+<div class="form-group">
+  <label for="id_rack">Rack:</label>
+  {{ form.rack }}
+  {% if form.rack.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.rack.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+
+<div class="form-group">
+  <label for="id_dev_type">Tipo de Dispositivo:</label>
+  {{ form.dev_type }}
+  {% if form.dev_type.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.dev_type.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+
+<div class="form-group">
+  <label for="id_brand">Marca:</label>
+  {{ form.brand }}
+  {% if form.brand.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.brand.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+
+<div class="form-group">
+  <label for="id_dev_model">Modelo de Dispositivo:</label>
+  {{ form.dev_model }}
+  {% if form.dev_model.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.dev_model.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+
+<!-- Campo 'switch' -->
+<div class="form-group">
+  <label for="id_switch">Switch:</label>
+  {{ form.switch }}
+  {% if form.switch.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.switch.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+
+<!-- Campo 'port_id' -->
+<div class="form-group">
+  <label for="id_port_id">Puerto del Switch:</label>
+  {{ form.port_id }}
+  {% if form.port_id.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.port_id.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+
+<!-- Campo 'patch_port_in' con help_text -->
+<div class="form-group">
+  <label for="id_patch_port_in">Puerto Patchera Entrada:</label>
+  {{ form.patch_port_in }}
+  {% if form.patch_port_in.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.patch_port_in.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+  {% if form.patch_port_in.help_text %}
+  <small class="form-text text-muted">{{ form.patch_port_in.help_text }}</small>
+  {% endif %}
+</div>
+
+<!-- Campo 'patch_port_out' con help_text -->
+<div class="form-group">
+  <label for="id_patch_port_out">Puerto Patchera Salida:</label>
+  {{ form.patch_port_out }}
+  {% if form.patch_port_out.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.patch_port_out.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+  {% if form.patch_port_out.help_text %}
+  <small class="form-text text-muted">{{ form.patch_port_out.help_text }}</small>
+  {% endif %}
+</div>
+
+<!-- Campo 'switch_in' con help_text -->
+<div class="form-group">
+  <label for="id_switch_in">Switch de Ingreso:</label>
+  {{ form.switch_in }}
+  {% if form.switch_in.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.switch_in.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+  {% if form.switch_in.help_text %}
+  <small class="form-text text-muted">{{ form.switch_in.help_text }}</small>
+  {% endif %}
+</div>
+
+<!-- Campo 'switch_out' con help_text -->
+<div class="form-group">
+  <label for="id_switch_out">Switch de Salida:</label>
+  {{ form.switch_out }}
+  {% if form.switch_out.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.switch_out.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+  {% if form.switch_out.help_text %}
+  <small class="form-text text-muted">{{ form.switch_out.help_text }}</small>
+  {% endif %}
+</div>
+
+<!-- Campo 'obs' -->
+<div class="form-group">
+  <label for="id_obs">Observaciones:</label>
+  {{ form.obs }}
+  {% if form.obs.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.obs.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+
+{% endblock form %}
+
+{% block form_scripts %}
+<script src="{% static 'switch_port/js/form.js' %}"></script>
+{% endblock form_scripts %}
