--- a/core/sh/templates/device/create.html
+++ b/core/sh/templates/device/create.html
@@ -151,21 +151,21 @@
 </div>
 
 <div class="form-group">
-  <label for="id_wall_port">Boca de Pared:</label>
-  {{ form.wall_port }}
-  {% if form.wall_port.errors %}
+  <label for="id_wall_port_in">Boca de Pared:</label>
+  {{ form.wall_port_in }}
+  {% if form.wall_port_in.errors %}
   <div class="invalid-feedback d-block">
-    {{ form.wall_port.errors|join:"<br>" }}
+    {{ form.wall_port_in.errors|join:"<br>" }}
   </div>
   {% endif %}
 </div>
 
 <div class="form-group">
-  <label for="id_switch_port">Boca Switch:</label>
-  {{ form.switch_port }}
-  {% if form.switch_port.errors %}
+  <label for="id_switch_port_in">Boca Switch:</label>
+  {{ form.switch_port_in }}
+  {% if form.switch_port_in.errors %}
   <div class="invalid-feedback d-block">
-    {{ form.switch_port.errors|join:"<br>" }}
+    {{ form.switch_port_in.errors|join:"<br>" }}
   </div>
   {% endif %}
 </div>
