--- a/core/sh/templates/wall_port/list.html
+++ b/core/sh/templates/wall_port/list.html
@@ -10,10 +10,10 @@
 {% block columns %}
 
   <th scope="col" style="width: 5%;">Id</th>
-  <th scope="col" style="width: 10%;">oficina</th>
-  <th scope="col" style="width: 5%;">Puerto Pared</th>
-  <th scope="col" style="width: 20%;">Switch Ingreso</th>
-  <th scope="col" style="width: 20%;">Switch Salida</th>
+  <th scope="col" style="width: 10%;">Oficina</th>
+  <th scope="col" style="width: 10%;">Puerto Pared</th>
+  <th scope="col" style="width: 20%;">Patchera de Ingreso</th>
+  <th scope="col" style="width: 20%;">Switch de Ingreso</th>
   <th scope="col" style="width: 20%;">Detalles</th>
   <th scope="col" style="width: 20%;">Opciones</th>
 
