--- a/core/sh/templates/device/list.html
+++ b/core/sh/templates/device/list.html
@@ -11,11 +11,12 @@
 
   <th scope="col" style="width: 5%;">Id</th>
   <th scope="col" style="width: 10%;">Tipo</th>
-  <th scope="col" style="width: 10%;">Marca</th>
+  <th scope="col" style="width: 5%;">Marca</th>
   <th scope="col" style="width: 10%;">Modelo</th>
-  <th scope="col" style="width: 10%;">IP</th>
+  <th scope="col" style="width: 5%;">IP</th>
   <th scope="col" style="width: 10%;">Boca Pared</th>
   <th scope="col" style="width: 10%;">Switch Ingreso</th>
+  <th scope="col" style="width: 10%;">Patchera Ingreso</th>
   <th scope="col" style="width: 10%;">Oficina</th>
   <th scope="col" style="width: 10%;">Empleado</th>
   <th scope="col" style="width: 15%;">Opciones</th>
