--- a/core/sh/templates/move_type/list.html
+++ b/core/sh/templates/move_type/list.html
@@ -3,15 +3,15 @@
 
 {% block header_list %}
  <!-- Datatables de la App sh -->
- <script src="{% static 'province/js/list.js' %}"></script>
+ <script src="{% static 'move_type/js/list.js' %}"></script>
 {% endblock header_list %}
 
 {% block columns %}
 
   <th scope="col" style="width: 10%;">Id</thr>
-  <th scope="col" style="width: 10%;">Número de Distrito</thr>
-  <th scope="col" style="width: 60%;">Provincia</th>
-  <th scope="col" style="width: 30%;">Opciones</th>
+  <th scope="col" style="width: 25%;">Movimiento</thr>
+  <th scope="col" style="width: 55%;">Detalle</th>
+  <th scope="col" style="width: 20%;">Opciones</th>
 
 {% endblock columns %}
 
@@ -24,7 +24,7 @@
 {% block add_button %}
 
 <a href="{{ create_url }}" type="button" class="btn btn-primary" id="{{btn_add_id}}">
-  <i class="fas fa-plus"></i> Agregar Provincia
+  <i class="fas fa-plus"></i> Agregar Tipo de Movimiento
 </a>
 
 {% endblock add_button %}
