--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -148,6 +148,12 @@
                     <p>Modelos de Dispositivos</p>
                   </a>
                 </li>
+                <li class="nav-item">
+                  <a href="{% url 'sh:move_type_list' %}" class="nav-link">
+                    <i class="fa-solid fa-arrows-turn-to-dots"></i>
+                    <p>Tipo de Movimiento</p>
+                  </a>
+                </li>
               </ul>
             </li>
 
@@ -225,8 +231,8 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">
-                <i class="fa-solid fa-clipboard-list"></i>
+              <a href="{% url 'sh:movements_list' %}" class="nav-link">
+                <i class="fa-solid fa-arrows-turn-to-dots"></i>
                 <p>Movimientos</p>
               </a>
             </li>
