--- a/core/sh/templates/rack/create.html
+++ b/core/sh/templates/rack/create.html
@@ -1,6 +1,12 @@
 {% extends 'form.html' %}
-
 {% load static %}
+
+{% block extra_refs %}
+<!-- Select2 -->
+<link rel="stylesheet" href="{% static 'lib/select2-4.1.0-rc.0/dist/css/select2.min.css' %}">
+<link rel="stylesheet" href="{% static 'lib/select2-4.1.0-rc.0/dist/css/select2-bootstrap.min.css' %}">
+<script src="{% static 'lib/select2-4.1.0-rc.0/dist/js/select2.full.min.js' %}"></script>
+{% endblock extra_refs %}
 
 {% block form %}
 <div class="form-group">
@@ -9,6 +15,16 @@
   {% if form.rack.errors %}
     <div class="invalid-feedback d-block">
       {{ form.rack.errors|join:"<br>" }}
+    </div>
+  {% endif %}
+</div>
+
+<div class="form-group">
+  <label for="id_office">Oficina:</label>
+  {{ form.office }}
+  {% if form.office.errors %}
+    <div class="invalid-feedback d-block">
+      {{ form.office.errors|join:"<br>" }}
     </div>
   {% endif %}
 </div>
@@ -30,4 +46,5 @@
 
 {% block form_scripts %}
   <script src="{% static 'form_basic.js' %}"></script>
+  <script src="{% static 'rack/js/form.js' %}"></script>
 {% endblock form_scripts %}
