Changing DAL to DSS

--- a/templates/form.html
+++ b/templates/form.html
@@ -4,6 +4,9 @@
 {% block extra_refs %}
   <link href="{% static 'autocomplete_light/vendor/select2/css/select2.min.css' %}" rel="stylesheet" />
   <link href="{% static 'autocomplete_light/select2.css' %}" rel="stylesheet" />
+
+  {%include 'autocomplete_ligth/static.html'%}
+
 {% endblock extra_refs %}
 
 {% block content %}
