--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   <!-- Jquery -->
   <script src="{% static 'lib/adminlte_3.2.0/plugins/jquery/jquery.min.js' %}"></script>
+  <script src="{% static 'lib/jquery_3.6/jquery.min.js' %}"></script>
   <!-- Jquery Confirm 3.3.4 -->
   <link rel="stylesheet" href="{% static 'lib/jquery-confirm-v3.3.4/jquery-confirm.min.css' %}">
 
