finishing wall_ports

--- a/core/sh/templates/patch_port/create.html
+++ b/core/sh/templates/patch_port/create.html
@@ -22,10 +22,10 @@
 
 <div class="form-group">
   <label for="id_patchera">Patchera:</label>
-  {{ form.patch }}
-  {% if form.patch.errors %}
+  {{ form.patchera }}
+  {% if form.patchera.errors %}
   <div class="invalid-feedback d-block">
-    {{ form.patch.errors|join:"<br>" }}
+    {{ form.patchera.errors|join:"<br>" }}
   </div>
   {% endif %}
 </div>
