--- a/core/sh/templates/wall_port/create.html
+++ b/core/sh/templates/wall_port/create.html
@@ -74,6 +74,16 @@
 </div>
 
 <div class="form-group">
+  <label for="id_office">Puerto de la Pared:</label>
+  {{ form.wall_port }}
+  {% if form.wall_port.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.wall_port.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+
+<div class="form-group">
   <label for="id_rack">Rack:</label>
   {{ form.rack }}
   {% if form.rack.errors %}
