--- a/core/sh/templates/wall_port/create.html
+++ b/core/sh/templates/wall_port/create.html
@@ -104,7 +104,7 @@
 <div id="filter-port-cards" class="d-none">
   <div class="row">
     <div class="container">
-      <div class="card mb-1">
+      <div class="card my-1">
 
         <div class="card-header {{bg_color}}">
           Filtrar por Equipos
@@ -146,7 +146,7 @@
   </div>
 </div>
 
-<div class="form-group">
+<div class="form-group mt-3">
   <label for="id_wall_port">Puerto de la Pared:</label>
   {{ form.wall_port }}
   {% if form.wall_port.errors %}
