--- a/core/sh/templates/wall_port/create.html
+++ b/core/sh/templates/wall_port/create.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="card mt-1">
         <div class="card-header {{bg_color}}">
-          Filtros Geográficos
+          Filtros por Ubicacion
         </div>
         <div class="card-body">
           <div class="form-group">
@@ -107,7 +107,7 @@
       <div class="card my-1">
 
         <div class="card-header {{bg_color}}">
-          Filtrar por Equipos
+          Filtrar por Conexión
         </div>
         <div class="card-body">
           <div class="form-group">
